<resources>
    <string name="app_name">Hammrd</string>
    <string name="title_activity_get_home">Map</string>
    <string name="title_activity_get_food">Map</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_user_name">Your Name</string>
    <string name="settings_user_number">Your Phone Number</string>
    <string name="settings_contact_name">Emergency Contact Name</string>
    <string name="settings_contact_number">Emergency Contact Number</string>
    <string name="settings_address">Address</string>
    <string name="settings_maxinactivity">Maximum Inactivity Time</string>
    <string name="settings_button">Save Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
